updated readme.md docs

--- a/LitmusClient/LitmusClient.csproj
+++ b/LitmusClient/LitmusClient.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="RestSharp, Version=103.1.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Users\brendan\Documents\GitHub\RestSharp\RestSharp\bin\Release\RestSharp.dll</HintPath>
+      <HintPath>Components\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -57,7 +57,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Litmus\TestingApplication.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Components\ReadMe.txt" />
+    <Content Include="Components\RestSharp.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
