Development of the missing litmus client api methods

--- a/LitmusClientTests/LitmusClientTests.csproj
+++ b/LitmusClientTests/LitmusClientTests.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LitmusClientTests</RootNamespace>
     <AssemblyName>LitmusClientTests</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,33 +31,30 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.core">
-      <HintPath>..\..\..\Program Files\TestDriven.NET 3\NUnit\2.5\lib\nunit.core.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\..\..\Program Files\TestDriven.NET 3\NUnit\2.5\framework\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountFixture.cs" />
     <Compile Include="ApiClientFixture.cs" />
-    <Compile Include="CreateEmailTestRequestFixture.cs" />
-    <Compile Include="CreatePageTestRequestFixture.cs" />
+    <Compile Include="AssertHelper.cs" />
+    <Compile Include="UpdateResultBodyFixture.cs" />
+    <Compile Include="UpdateTestBodyFixture.cs" />
+    <Compile Include="CreateReportTestBodyFixture.cs" />
+    <Compile Include="CreateEmailTestBodyFixture.cs" />
+    <Compile Include="CreatePageTestBodyFixture.cs" />
     <Compile Include="LitmusInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LitmusClient\LitmusClient.csproj">
-      <Project>{9E9903FA-F8BD-429A-AB0F-A54602952DCE}</Project>
+      <Project>{9e9903fa-f8bd-429a-ab0f-a54602952dce}</Project>
       <Name>LitmusClient</Name>
     </ProjectReference>
   </ItemGroup>
