--- a/LitmusClientTests/LitmusClientTests.csproj
+++ b/LitmusClientTests/LitmusClientTests.csproj
@@ -38,6 +38,7 @@
       <HintPath>..\..\..\Program Files\TestDriven.NET 3\NUnit\2.5\framework\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
@@ -57,6 +58,9 @@
       <Project>{9e9903fa-f8bd-429a-ab0f-a54602952dce}</Project>
       <Name>LitmusClient</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
